# opensloth

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  build_dataset.py  environment.yaml  example_training_config.py  hs_training_config-1card.py  hs_training_config-4card.py  hypersloth_config.py  install.sh  poly_train.py  pyproject.toml  requierments.txt  requirements.txt  svllm_config.yaml  test.ipynb  test.py  test_logging_format.py  train.ipynb  train.py  train.sh  train2.sh  train_cfg.py  train_mmap.py  train_mp.py  train_opensloth.py
HyperSloth/: __init__.py  _debug_dataloader.py  _patch_inner_training_loop.py  _patch_inner_training_loop_ultra_minimal.py  _patch_log.py  _patch_sampler.py  _utils.py  app_config.py  dataset_utils.py  dynamic_batching.py  example_training_config.py  hp_trainer_setup.py  hypersloth_config.py  init_modules.py  init_modules_lazy_dataloader.py  logging_config.py  mmap_gradient_sync.py  mmap_gradient_sync_v2.py  nccl_grad_sync.py  patch_inner_training_loop.py  patch_sampler.py  patching.py  think_chat_template_tokenier_fix.py  transformer_trainer_setup.py
HyperSloth/patching/: __init__.py  get_batch_samples.py  get_samples.py  inner_training_loop.py  patch_get_batch_samples.py  patch_log.py  patch_sampler.py
HyperSloth/scripts/: build_dataset.py  export.py  get_example.py  get_example_config.py  hp_trainer.py  hypersloth.py  merge_and_save_lora.py  packing.py  prepare_model.py  trainer.py  trainner.py  vllm_serve.py
HyperSloth/utils/: _data_utils.py  build_hf_dataset.py  build_sharegpt_dataset.py  train_on_responses_only.py
configs/: Qwen3_2gpus.py  hyper_config.yaml  hypersloth_config_example.py  prepare_unsloth_model.py  training_args.yaml
doc/: readme_vi.md
docs/: benchmarks.md
examples/: README.md  config-1gpu.py  config-4gpus.py  config-openo1-gemma3-12b.py  config-openo1-gemma3-1b.py  config-openo1-gemma3-1b_1gpu.py  config-openo1-gemma3-1b_2gpu.py  config-openo1-gemma3-1b_4gpu.py  config-openo1-gemma3-1b_8gpu.py  config-openo1-gemma3-1b_v2.py  config-openo1-gemma3-27b.py  config-openo1-gemma3-4b.py  example_advanced_lora_config.py  example_continual_lora_training.py  example_hf_dataset_full_finetuning.py  example_hf_dataset_full_finetuning_2gpus.py  example_hf_dataset_lora_single_gpu.py  example_memory_optimized_training.py  example_sharegpt_high_rank_lora.py  example_sharegpt_lora_2gpus.py  example_sharegpt_lora_multi_gpu.py  example_vision_language_lora.py  hs_training_config-1gpu.py  hs_training_config-4gpus.py  train_cfg.py
nbs/: debug.ipynb  prepare_dataset_example.ipynb  prepare_text_dataset.ipynb  test_unsloth.ipynb  vllm_inference.ipynb  vllm_inference_lora.ipynb
notebooks/: train.ipynb
notveryslow/: dataset_utils.py  mmap_gradient_sync.py  transformer_trainer_setup.py  unsloth_trainer_setup.py
scripts/: benchmark.py  build_dataset.py  download_model.sh  train.py  train_benchmark.py  train_minimal.py  train_opensloth.py  unsloth_qwen3_lazy_dataloader.py  unsloth_qwen3_minimal.py
src/opensloth/: __init__.py  dataset_utils.py  example_training_config.py  init_modules.py  logging_config.py  mmap_gradient_sync.py  nccl_grad_sync.py  opensloth_config.py  opensloth_trainer_setup.py
src/opensloth/patching/: __init__.py  get_batch_samples.py  inner_training_loop.py  patch_log.py  patch_sampler.py
src/opensloth/scripts/: build_dataset_hf.py  build_dataset_sharegpt.py  get_example_config.py  hp_trainer.py  opensloth_sft_trainer.py  opensloth_trainer.py
tests/: benchmark_vllm.py  mocktest.py  smart_partition.py  test.ipynb  test_weight.py
unsloth_trainer_multi_gpus/: mmap_gradient_sync.py  sync_lora_cb.py  sync_lora_cb_disk.py  training_utils.py
wandb/: latest-run
wandb/run-20250601_184125-91x01rja/: run-91x01rja.wandb
wandb/run-20250601_184125-91x01rja/files/: config.yaml  requirements.txt  wandb-metadata.json
